SUGGESTED_SPLITS: Split 1: Files: [.github/workflows/dependency-review.yml, .github/workflows/npm-publish.yml, .github/workflows/test.yml] Rationale: CI/CD behavior changes (security gate, when tests run, and what publishing requires) are tightly related and should be reviewed together. Message: |   chore(ci): add dependency review and simplify publish/test workflows
  - Add Dependency Review workflow on PRs (main/working) and pushes to working, with PR summary comments
  - Run test workflow only on pull requests to main/working (stop running on branch pushes)
  - Remove publish workflow’s separate build job and dependency so npm publishing no longer repeats the full CI matrix

Split 2:
Files: [LICENSE]
Rationale: Legal/attribution change is independent of CI behavior and is easier to audit separately.
Message: |
  chore(license): update copyright holder name

  - Change Apache 2.0 license header to attribute copyright to Tim O'Brien

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,10 @@
 name: Run Tests
 
 on:
-  push:
+  pull_request:
     branches:
       - main
-      - 'release/**'
-      - 'feature/**'
+      - working
 
 permissions:
   contents: read
