--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theunwalked/cardigantime",
-  "version": "0.0.19",
+  "version": "0.0.20-dev.0",
   "description": "cardigantime is a tool to help you time your cardigans.",
   "type": "module",
   "main": "./dist/cardigantime.cjs",
